# efex-assesment

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: db.sqlite3
backend/core/: urls.py
backend/core/settings/: base.py  development.py  production.py
backend/student/: models.py  repository.py  urls.py  use_cases.py  views.py
backend/student/migrations/: 0001_initial.py
backend/tests/: test_students.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
frontend/: index.html  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: AutocorrectTextarea.tsx
frontend/src/tests/: AutocorrectTextarea.test.tsx
questions/: answer_1.py  answer_2.sql
questions/tests/: test_question.py
